fixed container spacing issue

--- a/src/App.css
+++ b/src/App.css
@@ -201,6 +201,7 @@ main {
   width: 250px;
   border: 1px solid #eeeeee;
   position: relative;
+  margin-bottom: 50px;
 }
 
 .rectangle:hover {
@@ -215,7 +216,6 @@ main {
 .rectangle .button {
   width: 100%;
   height: 50px;
-  /* background-color: black; */
   color: white;
   font-weight: 700;
   text-transform: uppercase;
@@ -374,8 +374,7 @@ footer {
     margin-top: 40px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
-    gap: 50px;
+    justify-content: space-evenly;
 }
 
 .main-cart {
